refactor: wczytywanie pliku, trzeba ogarnąć pliki biarne